[project]
name = "company_claims_analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Humphrey Yeboah",email = "haky-works@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
